Closed
Bug 41016
Opened 26 years ago
Closed 26 years ago
[pp]Object's region not repainted correctly when window's resized.
Categories
(Core Graveyard :: GFX, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: bnesse)
References
()
Details
(Keywords: platform-parity)
Build: 2000052920
Platform: Mac
Other Platforms: Works on Win 98.
Expected results: When the window is resized, the object's region should be
repainted correctly.
What I got: Resizing the window as the animation is playing causes the object
region not to be repainted correctly.
Steps to reproduce:
1) Open the url mentioned in NS6.
2) As the animation begins ,which is contained in a Object element, resize the
window.
3) The region of object is not completely repainted.
Comment 1•26 years ago
|
||
Works correctly on WINNT. Don can you take a look at this on the Mac?
Assignee: kmcclusk → dcone
Comment 2•26 years ago
|
||
The Flash animation does not load on the Mac.. or play, so I can not confirm
this. Works on NT. I am giving this to Karnaze to give to the owner of plugins
Assignee: dcone → karnaze
| Reporter | ||
Comment 4•26 years ago
|
||
Since the animation used in the Object element is a flash file (swf), you need to
have the Shockwave Flash plugin installed in the plugins folder.
| Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 5•26 years ago
|
||
Removed code which was needlessly painting the region gray after the plugin was
called to redraw. r=av.
/layout/html/base/src/nsObjectFrame.cpp (v 1.162)
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 6•26 years ago
|
||
Fantasic ! Works properly now in July 11 Mac build (2000071120).
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•