Removed code which was painting rectangles over the plugin objects on the Mac. Bug #41016. r=av